fix(alert/confirm-dialog): changed alignment to left by default and right for footer (#2509)

--- a/src/sass/alert-dialog/alert-dialog.scss
+++ b/src/sass/alert-dialog/alert-dialog.scss
@@ -13,13 +13,16 @@
     margin-left: var(--spacing-200);
     margin-right: var(--spacing-200);
     padding: var(--spacing-200);
-    text-align: center;
 }
 
 .alert-dialog__title {
     @include typography-large-1();
 
     margin: 0;
+}
+
+.alert-dialog__footer {
+    text-align: right;
 }
 
 .alert-dialog__main {
